# AmargDownloader-GUI

./: .gitignore  LICENSE  README.md  copy-splash.cjs  index.html  package-lock.json  package.json  splashscreen.html  test.json  tsconfig.json  vite.config.ts
src/: custom.d.ts  main.ts  splashscreen.html  styles.css
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitkeep
src-tauri/src/: downloads.rs  info_urls.rs  lib.rs  logger.rs  main.rs
src/components/: AdvancedProgress.ts  BarreDwl.ts  BlockRLclick.ts  BugaPopup.ts  KeyBuga.ts  Model3d.ts  Popupmanager.ts  Schedule.ts  Setting.ts  SimpleProgress.ts  Support.ts  appSettings.ts  customAlert.ts  initSystemTheme.ts  toggleTheme.ts
src/utils/: BUGA.glb  init.ts  listMultiDwlVid.ts  logger.ts  openFolder.ts  sendpath.ts  validateName.ts  verifHTML.ts
