[package]
name = "AMARG-Downloder-beta"
version = "0.1.0"
description = "A lightweight and fast Tauri application for downloading videos from the internet, with format management, customizable output folders, and a user-friendly interface."
authors = ["BUGA <ggxini@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "amarg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

regex = "1.11"  
dirs = "4.0"
open = "3.2"
tauri-plugin-dialog = "2.0.0-beta"
tokio = { version = "1.47.1", features = ["time", "rt-multi-thread", "macros", "process"] }
serde_json = "1.0"
tauri-plugin-fs = "2"

# Pour recupere la date du jour
chrono = "0.4" 

# Pour gérer les processus (Command)
which = "6.0"

# Pour gérer le partage d'état entre threads
parking_lot = "0.12"

# Logging (utile pour debug)
log = "0.4"
tauri-plugin-log = "2"

dirs-next = "2.0"
webbrowser = "1.0.5"



[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
